<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/congratulations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="24sp"
        android:layout_marginTop="200dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score_text"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/final_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage_replacement"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/new_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/grey_brown"
        android:text="@string/take_new_quiz_button_text"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="@color/grey_brown"
        android:text="@string/finish_button_text"
        android:layout_marginTop="20dp" />

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/main"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ScoreActivity">-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="168dp"-->
<!--        android:layout_height="76dp"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->